# HGEnzine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
SandBox/: .gitignore  CMakeLists.txt
SandBox/include/sandbox/: Game.hpp  TestInputs.hpp
SandBox/src/: Game.cpp  TestInputs.cpp  main.cpp
include/hg_enzine/: HGEnzine.hpp
include/hg_enzine/core/: Application.hpp  BeginPreprocessors.hpp  Config.hpp  Window.hpp
include/hg_enzine/events/: Event.hpp
include/hg_enzine/inputs/: Input.hpp  Inputs.hpp  Keyboard.hpp  Mouse.hpp
include/hg_enzine/utils/: Singleton.hpp
src/core/: Application.cpp  Window.cpp
src/events/: Event.cpp
src/inputs/: Input.cpp  Keyboard.cpp  Mouse.cpp
